// Sorapointa - A server software re-implementation for a certain anime game, and avoid sorapointa.
// Copyright (C) 2022  Sorapointa Team
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

import "AbilityAttachedModifier.proto";
import "AbilityString.proto";
import "ModifierAction.proto";
import "ModifierProperty.proto";

option java_package = "org.sorapointa.proto";

message AbilityMetaModifierChange {
  AbilityAttachedModifier attached_instanced_modifier = 3;
  bool is_attached_parent_ability = 5;
  repeated ModifierProperty properties = 14;
  bool is_mute_remote = 12;
  int32 modifier_local_id = 2;
  bool is_durability_zero = 8;
  AbilityString parent_ability_name = 13;
  uint32 server_buff_uid = 9;
  uint32 apply_entity_id = 7;
  AbilityString parent_ability_override = 15;
  ModifierAction action = 4;
}
