// Extracted from 3.3 GIO
// By YYHEggEgg#6167

syntax = "proto3";

option csharp_namespace = "OldProtos";

import "BreakoutSyncCreateConnect.proto";
import "BreakoutSyncPing.proto";
import "BreakoutSyncFinishGame.proto";
import "BreakoutSyncSnapShot.proto";
import "BreakoutSyncAction.proto";

message AbilityMixinBreakout {
    SyncType sync_type = 8;
    enum SyncType {
        SYNC_TYPE_NONE = 0;
        SYNC_TYPE_CREATE_CONNECT = 1;
        SYNC_TYPE_START_GAME = 2;
        SYNC_TYPE_PING = 3;
        SYNC_TYPE_FINISH_GAME = 4;
        SYNC_TYPE_SNAP_SHOT = 5;
        SYNC_TYPE_ACTION = 6;
    }
    
    int32 retcode = 2;
    
    oneof sync {
        BreakoutSyncCreateConnect sync_create_connect = 4;
        BreakoutSyncPing sync_ping = 7;
        BreakoutSyncFinishGame sync_finish_game = 6;
        BreakoutSyncSnapShot sync_snap_shot = 12;
        BreakoutSyncAction sync_action = 9;
    }
}
