// Extracted from 3.3 GIO
// By YYHEggEgg#6167

syntax = "proto3";

option csharp_namespace = "OldProtos";

message AbilityMixinEraseBrickActivity {
    repeated uint32 data = 6;
}
