// Sorapointa - A server software re-implementation for a certain anime game, and avoid sorapointa.
// Copyright (C) 2022  Sorapointa Team
//
// This program is free software: you can redistribute it and/or modify
// it under the terms of the GNU Affero General Public License as
// published by the Free Software Foundation, either version 3 of the
// License, or (at your option) any later version.
//
// This program is distributed in the hope that it will be useful,
// but WITHOUT ANY WARRANTY; without even the implied warranty of
// MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
// GNU Affero General Public License for more details.
//
// You should have received a copy of the GNU Affero General Public License
// along with this program.  If not, see <https://www.gnu.org/licenses/>.

syntax = "proto3";

import "Vector.proto";

option java_package = "emu.grasscutter.net.oldproto";

message AbilityMixinWindSeedSpawner {
  oneof cmd {
    AddSignal add_signal = 2;
    RefreshSeed refresh_seed = 15;
    CatchSeed catch_seed = 11;
  }

  message AddSignal {}

  message RefreshSeed {
    repeated Vector pos_list = 6;
  }

  message CatchSeed {
    uint32 entity_id = 8;
  }
}
